# RobohandR1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RobohandR1.sh  sonar-project.properties
Dependencies/: CMakeLists.txt
Documentation/: README.md  Robohand.doxyfile
Hardware/RobohandR1/: RobohandR1.kicad_pcb  RobohandR1.kicad_prl  RobohandR1.kicad_pro  RobohandR1.kicad_sch  RobohandR1.kicad_sch-bak  _autosave-dca.kicad_sch  adc.kicad_sch  dtm.kicad_sch  dtm_stm.kicad_sch  fp-info-cache  pm.kicad_sch  pmsc.kicad_sch  report.txt  sensors.kicad_sch
Include/Core/: hardware_stats.h  scheduler.h  sensor_manager_init.h  stats.h  template.h
Include/Core/Scheduler/: log_manager.h  scheduler.h  scheduler_mpu_tz.h  scheduler_tz.h  system_init.h
Include/Core/Shell/: hardware_stats_shell_commands.h  scheduler_shell_commands.h  sensor_manager_shell_commands.h  (+2 more)
Include/Drivers/: bmm350_adapter.h  i2c_driver.h  i2c_sensor_adapter.h  sensor_manager.h
Include/Kernel/: kernel_init.h  kernel_test_integration.h
Include/Programs/: stats.h  usb_shell.h
Include/Tests/: TESTING.md  test_framework.h  test_integration.h  test_mpu.h  test_scheduler.h  test_tz.h
Outputs/: RobohandR1.uf2  prompt_file.txt
Src/: main.c
Src/Core/: scheduler.c  sensor_manager_init.c  stats.c
Src/Drivers/: bmm350_adapter.c  i2c_driver.c  i2c_sensor_adapter.c  sensor_manager.c
Src/Kernel/: kernel_init.c  kernel_test_integration.c
Src/Programs/: stats.c  usb_shell.c
Src/Tests/: test_framework.c  test_integration.c  test_interrupt_integration.c  test_mpu.c  test_scheduler.c  test_tz.c
(+50 files in other folders)
